syntax="proto3";

option go_package = "genproto/userservice";

package userservice;

service AdminService {
  rpc CreateAdmin(CreateAdminReq) returns (CreateAdminRes);
  rpc UpdateAdmin(UpdateAdminReq) returns (UpdateAdminRes);
  rpc GetAdmin(GetAdminReq) returns (GetAdminRes);
  rpc ForgetPassword(ForgetPasswordReq) returns (ForgetPasswordRes);
  rpc GetAllAdmin(GetAllAdminReq) returns (GetAllAdminRes);
  rpc DeleteAdmin(DeleteAdminReq) returns (DeleteAdminRes);
}

message AdminModel {
  string id = 1;
  string name = 2;
  string lastname = 3;
  string email = 4;
  string password = 5;
  string created_at = 6;
  string updated_at = 7;
  string role = 8;
}



message CreateAdminReq {
  string admin_name = 1;
  string admin_email = 2;
  string admin_password = 3;
}

message CreateAdminRes{
  string message = 1;
}

message DeleteAdminCreateAdminRes {
  string message = 1;
}

message UpdateAdminReq {
  AdminModel admin_req = 1;
}

message UpdateAdminRes {
  AdminModel admin_res = 1;
}

message GetAdminReq {
  string admin_id = 1;
}

message GetAdminRes {
  AdminModel admin_res = 1;
}

message ForgetPasswordReq {
  string admin_email = 1;
}

message ForgetPasswordRes {
  string message = 1;
}

message GetAllAdminReq {
  AdminModel admin_req = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetAllAdminRes {
  repeated AdminModel admin_res = 1;
}

message DeleteAdminReq {
  string admin_id = 1;
}

message DeleteAdminRes {
  string message = 1;
}
